[package]
name = "fork"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
errno = "0.3.9"
libc = "0.2.158"
linux-raw-sys = { version = "0.6.5", default-features = false, features = ["no_std", "general"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-raw-sys = { version = "0.6.5", default-features = false }

[target.'cfg(not(target_os = "linux"))'.dependencies]
libc = "0.2.158"
